[package]
name = "brres"
license = "MIT"
version = "0.0.0"
edition = "2021"
description = "gctex is a Rust crate designed for encoding and decoding texture formats used in the Nintendo GameCube and Wii games. The library provides C bindings, making it useful in both Rust and C/C++ based projects."
homepage = "https://github.com/riidefi/RiiStudio/tree/master/source/brres"
repository = "https://github.com/riidefi/RiiStudio"
keywords = ["gamedev", "graphics", "wii", "gamecube", "texture"]
readme = "README.md"
# Don't include unit tests in crate
exclude=["/tests"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
# Enabled only for development
default = ["c_api"]
c_api = []

[lib]
crate-type=["cdylib", "lib", "staticlib"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.86"
bytemuck = "1.16.0"
brres-sys = { path = "./lib/brres-sys" }
gctex = "0.3.7"
